--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "movies_server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon index.js"
+    "server": "nodemon main.js"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "mongoose": "^6.2.9",
-    "node-fetch": "^3.2.3"
+    "node-fetch": "^3.2.3",
+    "nodemon": "^2.0.16"
   }
 }
